test/expected/explain_yo_exclam_k_b.out
struct S; explain bool operator!(S) final
            ^
13: error: member operator ! must have exactly 0 parameters
